# options-strategy-backtesting

./: .gitignore  FINDINGS.md  LICENSE  README.md  pyproject.toml  run_sim.py
api/: README.md  config.py  main.py
experiments/: README.md  account_sim.py  adaptive_lab.py  aggressive_backtest.py  alpha_measurement.py  bear_detection.py  bear_energy.py  bear_protection_deep.py  bootstrap_analysis.py  clean_validation_2024.py  combined_backtest.py  confidence_validation.py  conservative_10yr.py  final_comparison.py  hybrid_backtest.py  long_backtest_real_data.py  long_portfolio_configs.py  parameter_challenge.py  per_ticker_hybrid_test.py  performance_summary.py  portfolio_advanced.py  portfolio_sim.py  portfolio_theta_pullback.py  regime_rsi_test.py  rsi_sweep.py  run_crypto_backtest.py  run_spread_backtest.py  safety_features_theta.py  strategy_shootout.py  sweep.py  tbill_allocation_backtest.py  theta_capture.py  tier1_max_test.py  validate_with_theta.py  vol_premium_max_test.py
tests/: conftest.py  test_account_invariants.py  test_adaptive_pullback.py  test_aggressive_pullback.py  test_analysis.py  test_backtester.py  test_cache.py  test_credit_spreads.py  test_data.py  test_data_integrity.py  test_models.py  test_options.py  test_pipeline.py  test_pricing_providers.py  test_provider_aware_strategies.py  test_provider_dispatch.py  test_statistics.py  test_strikes.py  test_universe.py  test_utils.py  test_walkforward.py
tradelab/: __init__.py  ab_test.py  account.py  analysis.py  backtester.py  bootstrap.py  cache.py  config.py  data.py  models.py  options.py  (+6 more)
(+46 files in other folders)
